Modern IDB: storage/indexeddb/database-deletepending-flag.html fails. https://bugs.webkit.org/show_bug.cgi?id=152600

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes, and at least 2 crashing tests now timeout).

* Modules/indexeddb/server/IDBBackingStore.h:

* Modules/indexeddb/server/MemoryIDBBackingStore.cpp:
(WebCore::IDBServer::MemoryIDBBackingStore::deleteBackingStore):
* Modules/indexeddb/server/MemoryIDBBackingStore.h:

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::performCurrentDeleteOperation):
(WebCore::IDBServer::UniqueIDBDatabase::deleteBackingStore):
(WebCore::IDBServer::UniqueIDBDatabase::didDeleteBackingStore):
* Modules/indexeddb/server/UniqueIDBDatabase.h:

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/170726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194488 268f45cc-cd09-0410-ab3c-d52691b4dbfc